css/jobs.css
/* ... */
/* owned jobs rows background */
.table-striped > tbody > tr.rowown > td {
    background-color: #ffcc99;
}

/* owned jobs overflow fading */
.table-striped > tbody > tr.rowown > td:nth-child(n+2):before,
.table-striped > tbody > tr.rowown:after {
    background: -moz-linear-gradient(left, rgba(255,204,153,0) 0%, rgba(255,204,153,1) 100%);
    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,204,153,0)), color-stop(100%,rgba(255,204,153,1)));
    background: -webkit-linear-gradient(left, rgba(255,204,153,0) 0%,rgba(255,204,153,1) 100%);
    background: -o-linear-gradient(left, rgba(255,204,153,0) 0%,rgba(255,204,153,1) 100%);
    background: -ms-linear-gradient(left, rgba(255,204,153,0) 0%,rgba(255,204,153,1) 100%);
    background: linear-gradient(to right, rgba(255,204,153,0) 0%,rgba(255,204,153,1) 100%);
}

/* jobs with bid rows background */
.table-striped > tbody > tr.rowbidon: > td:nth-child(n+2) {
    background-color: #99e566;
}

/* jobs with bid overflow fading */
.table-striped > tbody > tr.rowbidon > td:nth-child(n+2):before,
.table-striped > tbody > tr.rowbidon:after {
    background: -moz-linear-gradient(left, rgba(153,229,102,0) 0%, rgba(153,229,102,1) 100%);
    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(153,229,102,0)), color-stop(100%,rgba(153,229,102,1)));
    background: -webkit-linear-gradient(left, rgba(153,229,102,0) 0%,rgba(153,229,102,1) 100%);
    background: -o-linear-gradient(left, rgba(153,229,102,0) 0%,rgba(153,229,102,1) 100%);
    background: -ms-linear-gradient(left, rgba(153,229,102,0) 0%,rgba(153,229,102,1) 100%);
    background: linear-gradient(to right, rgba(153,229,102,0) 0%,rgba(153,229,102,1) 100%);
}

/* jobs with bid expired rows background */
.table-striped > tbody > tr.rowbidexpired > td {
    background-color: #ff8080;
}

/* jobs with bid expired overflow fading */
.table-striped > tbody > tr.rowbidexpired > td:nth-child(n+2):before,
.table-striped > tbody > tr.rowbidexpired:after {
    background: -moz-linear-gradient(left, rgba(255,128,128,0) 0%, rgba(255,128,128,1) 100%);
    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,128,128,0)), color-stop(100%,rgba(255,128,128,1)));
    background: -webkit-linear-gradient(left, rgba(255,128,128,0) 0%,rgba(255,128,128,1) 100%);
    background: -o-linear-gradient(left, rgba(255,128,128,0) 0%,rgba(255,128,128,1) 100%);
    background: -ms-linear-gradient(left, rgba(255,128,128,0) 0%,rgba(255,128,128,1) 100%);
    background: linear-gradient(to right, rgba(255,128,128,0) 0%,rgba(255,128,128,1) 100%);
}

/* jobs as runner rows background */
.table-striped > tbody > tr.rowrunner > td {
    background-color: #b1e1f3;
}

/* jobs as runner overflow fading */
.table-striped > tbody > tr.rowrunner > td:nth-child(n+2):before,
.table-striped > tbody > tr.rowrunner:after {
    background: -moz-linear-gradient(left, rgba(177,225,243,0) 0%, rgba(177,225,243,1) 100%);
    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(177,225,243,0)), color-stop(100%,rgba(177,225,243,1)));
    background: -webkit-linear-gradient(left, rgba(177,225,243,0) 0%,rgba(177,225,243,1) 100%);
    background: -o-linear-gradient(left, rgba(177,225,243,0) 0%,rgba(177,225,243,1) 100%);
    background: -ms-linear-gradient(left, rgba(177,225,243,0) 0%,rgba(177,225,243,1) 100%);
    background: linear-gradient(to right, rgba(177,225,243,0) 0%,rgba(177,225,243,1) 100%);
}

/* jobs as mechanic background */
.table-striped > tbody > tr.rowmechanic > td {
    background-color: #ffff6c;
}

/* jobs as mechanic overflow fading */
.table-striped > tbody > tr.rowmechanic > td:nth-child(n+2):before,
.table-striped > tbody > tr.rowmechanic:after {
    background: -moz-linear-gradient(left, rgba(255,255,108,0) 0%, rgba(255,255,108,1) 100%);
    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,108,0)), color-stop(100%,rgba(255,255,108,1)));
    background: -webkit-linear-gradient(left, rgba(255,255,108,0) 0%,rgba(255,255,108,1) 100%);
    background: -o-linear-gradient(left, rgba(255,255,108,0) 0%,rgba(255,255,108,1) 100%);
    background: -ms-linear-gradient(left, rgba(255,255,108,0) 0%,rgba(255,255,108,1) 100%);
    background: linear-gradient(to right, rgba(255,255,108,0) 0%,rgba(255,255,108,1) 100%);
}

.table-worklist tbody tr.row-worklist-live {
    cursor: pointer;
    border: 0 none;
}

.table-worklist tbody tr td {
    border: 0 none;
}

/* worklist table column sizes */
.table-worklist tr > td:nth-child(1) {
    max-width: 60px;
}
.table-worklist tr > td:nth-child(2) {
    max-width: 350px; 
}
.table-worklist tr > td:nth-child(3) {
    max-width: 60px;
}
.table-worklist tr > td:nth-child(4) {
    max-width: 90px;
}
.table-worklist tr > td:nth-child(5) {
    max-width: 60px;
}
@media (max-width: 768px) {
    .table-worklist tr > td:nth-child(1),
    .table-worklist tr > td:nth-child(2),
    .table-worklist tr > td:nth-child(3) {
        max-width: auto; 
    }
    .table-worklist tr > td:nth-child(1),
    .table-worklist tr > td:nth-child(3) {
        min-width: 50px; 
    }
    .table-worklist tr > td:nth-child(2) {
        min-width: 100px; 
    }
    .table-worklist tr > th:nth-child(4),
    .table-worklist tr > td:nth-child(4) {
        display: none;
    }
    .table-worklist tr > th:nth-child(5),
    .table-worklist tr > td:nth-child(5) {
        display: none;
    }
    .table-worklist tr > th:nth-child(6),
    .table-worklist tr > td:nth-child(6) {
        display: none;
    }
}

.table-worklist tr > td a {
    color: #666;
}

.table-worklist tr > td:nth-child(2) > a {
    font-weight: normal;
    color: #333;
}

.table-worklist tr > td:nth-child(2) > a + h4 {
    display: inline-block;
    font-size: 1em;
    margin-right: 5px;
    font-weight: bold;
}
.table-worklist tr > td:nth-child(2) > a + h4:before {
    content: ' - ';
    font-weight: normal;
}
/* ... */

